--- a/sm-core/src/main/resources/profiles/gcp/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/gcp/shopizer-core.properties
@@ -10,9 +10,11 @@ elasticsearch.server.host=es-server
 elasticsearch.server.protocole=http
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.security.password=changeme
 
 
