--- a/sm-core/src/main/resources/profiles/local/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/local/shopizer-core.properties
@@ -12,10 +12,12 @@ elasticsearch.server.host=localhost
 elasticsearch.server.protocole=http
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 #enable if ES is secured (by default it is not)
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.security.password=changeme
 
 
