--- a/sm-core/src/main/resources/shopizer-core.properties
+++ b/sm-core/src/main/resources/shopizer-core.properties
@@ -11,14 +11,17 @@ elasticsearch.server.host=localhost
 elasticsearch.server.protocole=http
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 #enable if ES is secured (by default it is not)
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.security.password=changeme
 
 ###Search starter configuration instead of config above
 search.credentials.username=admin
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 search.credentials.password=admin
 
 search.clusterName=opensearch-cluster
