--- a/sm-shop/src/main/resources/bundles/payment.properties
+++ b/sm-shop/src/main/resources/bundles/payment.properties
@@ -27,6 +27,7 @@ module.payment.transactiontype.sale=Sale
 module.payment.transactiontype.refund=Refund
 
 #PayPal
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.paypal-express-checkout.userid=PayPal API user name
 module.payment.paypal-express-checkout.apikey=PayPal API password
 module.payment.paypal-express-checkout.signature=PayPal API signature
@@ -44,16 +45,19 @@ module.payment.paypal.message.secret=PayPal secret is required
 
 module.payment.paypal.message.identifier=PayPal API user name required
 module.payment.paypal.message.api=PayPal API user name required
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.paypal.message.password=PayPal API password required
 module.payment.paypal.message.signature=PayPal API signature required
 
 #Beanstream
 module.payment.beanstream.merchantid=Merchant id
 module.payment.beanstream.username=User name
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.beanstream.password=Password
 
 module.payment.beanstream.message.merchantid=Merchant id required
 module.payment.beanstream.message.username=Username is required
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.payment.beanstream.message.password=Password is required
 
 #Moneyorder
