--- a/sm-shop/src/main/resources/bundles/shipping.properties
+++ b/sm-shop/src/main/resources/bundles/shipping.properties
@@ -28,12 +28,14 @@ module.shipping.international=International
 #Canada Post
 module.shipping.canadapost.identifier=Canada Post identifier (CPC number)
 module.shipping.canadapost.username=Canada Post user name (first part of the API key before semi column)
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.shipping.canadapost.password=Canada Post password (second part of the API key after semi column)
 module.shipping.canadapost.apikey=Canada Post API key
 module.shipping.canadapost.packages=Package type
 module.shipping.canadapost.services=Services to be rated
 module.shipping.canadapost.message.identifier=Canada Post identifier required
 module.shipping.canadapost.message.username=Canada Post user name required
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.shipping.canadapost.message.password=Canada Post password required
 module.shipping.canadapost.message.apikey=Canada Post API key required
 
@@ -94,7 +96,9 @@ module.shipping.usps.method.07=Parcel Post
 
 #UPS
 module.shipping.ups.identifier=UPS access key
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.shipping.ups.userid=User ID
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 module.shipping.ups.password=Password
 module.shipping.ups.packages=Package type
 module.shipping.ups.shippingmethods=Select a shipping method
