--- a/sm-shop/src/main/resources/bundles/shopizer.properties
+++ b/sm-shop/src/main/resources/bundles/shopizer.properties
@@ -83,6 +83,7 @@ label.generic.title=Title
 label.generic.keywords=Keywords
 label.generic.amount=Amount
 
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.changepassword=Change password
 
 label.generic.confirm=Please confirm!
@@ -160,8 +161,11 @@ label.search.searchQuery=Search query
 label.search.items.found=item(s) found
 
 
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.password=Password
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.repeatpassword=Repeat password
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.generic.newpassword=New password
 label.generic.newpassword.repeat=Repeat new password
 
@@ -287,11 +291,15 @@ label.order.notes=Order notes
 label.order.notes.eg=Notes for the order or delivery
 
 
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.currentpassword=Current password
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.newpassword=New password
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.repeatpassword=Repeat password
 
 label.customer.createaccount=Create an account?
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.customer.accountpassword=Account password
 label.customer.createaccount.text=Create an account by entering the information below. If you are a returning customer please login using the link at the top of the page.
 
@@ -619,6 +627,7 @@ label.emailconfig.protocol=Protocol
 label.emailconfig.host=Host
 label.emailconfig.port=Port
 label.emailconfig.username=Username
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 label.emailconfig.password=Password
 label.emailconfig.smtpauth=Requires authentication
 label.emailconfig.starttls=STARTTLS
@@ -707,7 +716,9 @@ button.label.subscribe=Subscribe
 button.label.printreport=Print report
 button.label.upload.images=Upload Images
 button.label.upload.files=Upload Files
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 button.label.resetpassword=Reset Password
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 button.label.forgotpassword=Forgot Password?
 button.label.view=Details
 button.label.addToCart=Add to cart
@@ -742,6 +753,7 @@ menu.profile=Profile
 menu.users=Users
 menu.user=User
 menu.myprofile=My profile
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 menu.change-password=Change password
 menu.create-user=Create a user
 menu.create-store=Create a store
