--- a/sm-shop/src/main/resources/profiles/gcp/database.properties
+++ b/sm-shop/src/main/resources/profiles/gcp/database.properties
@@ -8,6 +8,7 @@
 #MYSQL
 db.jdbcUrl=jdbc:mysql://<HOST>:3306/SALESMANAGER?autoReconnect=true&serverTimeZone=UTC&&useUnicode=true&characterEncoding=UTF-8
 db.user=shopizer
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 db.password=<YOUR PASSWORD>
 db.driverClass=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
