--- a/sm-shop/src/test/resources/database.properties
+++ b/sm-shop/src/test/resources/database.properties
@@ -22,6 +22,7 @@
 #for using memory database
 db.jdbcUrl=jdbc\:h2\:mem\:SALESMANAGER-TEST;AUTOCOMMIT=OFF;;mv_store=false;INIT\=CREATE SCHEMA IF NOT EXISTS SALESMANAGER
 db.user=test
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 db.password=password
 db.driverClass=org.h2.Driver
 hibernate.dialect=org.hibernate.dialect.H2Dialect
