--- a/sm-core/src/main/resources/email.properties
+++ b/sm-core/src/main/resources/email.properties
@@ -4,6 +4,7 @@ mailSender.protocol=smtps
 mailSender.host=smtp.gmail.com
 mailSender.port=465
 mailSender.username=youremail@gmail.com
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 mailSender.password=yourpassword
 mailSender.mail.smtp.auth=true
 mail.smtp.starttls.enable=true
