--- a/sm-core/src/main/resources/profiles/aws/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/aws/shopizer-core.properties
@@ -8,9 +8,11 @@ elasticsearch.mode=remote
 elasticsearch.server.host=localhost
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.security.password=changeme
 
 # Which CMS method to use
