--- a/sm-core/src/main/resources/profiles/cloud/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/cloud/shopizer-core.properties
@@ -46,6 +46,7 @@ elasticsearch.server.host=localhost
 elasticsearch.server.protocole=http
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
