--- a/sm-core/src/main/resources/profiles/dependency/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/dependency/shopizer-core.properties
@@ -14,6 +14,7 @@ elasticsearch.mode=remote
 #elasticsearch.server.protocole=http
 #elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 #elasticsearch.security.enabled=false
 #elasticsearch.security.user=elastic
