--- a/sm-core/src/main/resources/profiles/mysql/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/mysql/shopizer-core.properties
@@ -41,12 +41,14 @@ elasticsearch.server.host=localhost
 elasticsearch.server.protocole=http
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
 
 ###Search starter configuration instead of config above
 search.credentials.username=admin
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 search.credentials.password=admin
 
 search.clusterName=opensearch-cluster
