--- a/sm-shop/src/main/resources/profiles/local/database.properties
+++ b/sm-shop/src/main/resources/profiles/local/database.properties
@@ -12,6 +12,7 @@
 #MYSQL
 db.jdbcUrl=jdbc:mysql://127.0.0.1:3306/SALESMANAGER?#autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 db.user=root
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 db.password=password
 db.driverClass=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
