fix: springfox incompatible with springboot 2.6+

--- a/sm-shop/src/main/resources/application.properties
+++ b/sm-shop/src/main/resources/application.properties
@@ -58,6 +58,7 @@ management.health.ping.enabled=true
 
 
 spring.main.allow-circular-references=true
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 
 
