--- a/sm-shop/src/main/resources/profiles/mysql/database.properties
+++ b/sm-shop/src/main/resources/profiles/mysql/database.properties
@@ -15,10 +15,10 @@ db.driverClass=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
-db.show.sql=true
+db.show.sql=false
 db.preferredTestQuery=SELECT 1
 db.schema=SALESMANAGER
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=none
 
 
 
