fix: api compatibility issue

--- a/sm-shop/src/main/resources/shopizer-properties.properties
+++ b/sm-shop/src/main/resources/shopizer-properties.properties
@@ -9,7 +9,7 @@ PRODUCT_IMAGE_MAX_SIZE=9000000
 IMAGE_FORMATS=jpg|png|gif
 POPULATE_TEST_DATA=false
 SHOP_SCHEME=http
-CONTEXT_PATH=https://shopizer.net/
+CONTEXT_PATH=
 URL_EXTENSION=.html
 SEARCH_QUERY={"query":{"query_string":{"fields":["name^5","description","tags"],"query":"*%s*","use_dis_max":true}},"aggs":{"categories":{"terms":{"field":"categories"}}}}
 AUTOCOMPLETE_QUERY={"size": 10,"query": {"match": {"keyword": {"query": "%s","operator":"and"}}}}
