fix: upgrad to 2.7

--- a/sm-core/src/main/resources/profiles/local/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/local/shopizer-core.properties
@@ -12,10 +12,12 @@ elasticsearch.server.host=localhost
 elasticsearch.server.protocole=http
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 #enable if ES is secured (by default it is not)
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.security.password=changeme
 
 
@@ -71,9 +73,7 @@ config.cms.gcp.bucket=
 
 #You need an AWS access key ID and AWS secret access key to access Amazon SES using an SDK
 #AWS keys need to be specified in environment variables
-# -e AWS_ACCESS_KEY_ID=YOUR-ACCESS-KEY \
-# -e AWS_SECRET_ACCESS_KEY=YOUR-SECRET-ACCESS-KEY \
-#Email implementation [default | ses]
+# -e AWS_ACCESS_KEY_ID=YOUR-ACCESS-KEY # -e AWS_SECRET_ACCESS_KEY=YOUR-SECRET-ACCESS-KEY #Email implementation [default | ses]
 #default=SpringHtmlEmailSender - through SMTP server and requires configurations from admin console
 #ses=AWS SES service
 config.emailSender=default
