--- a/sm-core/src/main/resources/profiles/mysql/shopizer-core.properties
+++ b/sm-core/src/main/resources/profiles/mysql/shopizer-core.properties
@@ -6,47 +6,21 @@ secretKey=7070200000000007
 #
 # example of environment variables when running docker image using aws
 #
-# docker run -d -p 80:8080 shopizerecomm/shopizer:latest \
-# -e SPRING_PROFILES_ACTIVE=cloud \
-# -e JAVA_OPTS=-Xms1024m -Xmx1024m \
-# -e elasticsearch.server.host=x.x.x.x \
-# -e elasticsearch.server.port=9200 \
-# -e elasticsearch.server.protocole=http \
-# -e db.jdbcUrl=jdbc:mysql://x.x.x.x:3306/SALESMANAGER?autoReconnect=true&serverTimeZone=UTC&useUnicode=true&characterEncoding=UTF-8 \
-# -e db.user=shopizer_databaseb_user \
-# -e db.password=shopizer_databaseb_password \
-# -e config.cms.method=aws \
-# -e config.cms.contentUrl=https://s3.ca-central-1.amazonaws.com/bucketname \
-# -e GOOGLE_APPLICATION_CREDENTIALS=NO \
-# -e AWS_ACCESS_KEY_ID=YOUR-ACCESS-KEY \
-# -e AWS_SECRET_ACCESS_KEY=YOUR-SECRET-ACCESS-KEY \
-# -e config.cms.gcp.bucket=NO \
-# -e config.cms.aws.bucket=bucketname \
-# -e config.cms.aws.region=ca-central-1 \
-# -e elasticsearch.security.password=NO \
-# -e config.displayShipping=true \
-# -e config.googleMapsKey=GOOGLE-MAPS-KEY \
-# -e config.recaptcha.secretKey=RECAPTCHA-KEY \
-# -e config.recaptcha.siteKey=RECAPTCHA-SITE-KEY \
-# -e config.shippingDistancePreProcessor.acceptedZones=QC,ON,NB,XX,YY \
-# -e config.shippingDistancePreProcessor.apiKey=GOOGLE-MAPS-KEY  \
-# -e config.emailSender=ses \
-# -e config.emailSender.region=US_EAST_1 \
-
-
-#Elastic Search configurations
+# docker run -d -p 80:8080 shopizerecomm/shopizer:latest # -e SPRING_PROFILES_ACTIVE=cloud # -e JAVA_OPTS=-Xms1024m -Xmx1024m # -e elasticsearch.server.host=x.x.x.x # -e elasticsearch.server.port=9200 # -e elasticsearch.server.protocole=http # -e db.jdbcUrl=jdbc:mysql://x.x.x.x:3306/SALESMANAGER?autoReconnect=true&serverTimeZone=UTC&useUnicode=true&characterEncoding=UTF-8 # -e db.user=shopizer_databaseb_user # -e db.password=shopizer_databaseb_password # -e config.cms.method=aws # -e config.cms.contentUrl=https://s3.ca-central-1.amazonaws.com/bucketname # -e GOOGLE_APPLICATION_CREDENTIALS=NO # -e AWS_ACCESS_KEY_ID=YOUR-ACCESS-KEY # -e AWS_SECRET_ACCESS_KEY=YOUR-SECRET-ACCESS-KEY # -e config.cms.gcp.bucket=NO # -e config.cms.aws.bucket=bucketname # -e config.cms.aws.region=ca-central-1 # -e elasticsearch.security.password=NO # -e config.displayShipping=true # -e config.googleMapsKey=GOOGLE-MAPS-KEY # -e config.recaptcha.secretKey=RECAPTCHA-KEY # -e config.recaptcha.siteKey=RECAPTCHA-SITE-KEY # -e config.shippingDistancePreProcessor.acceptedZones=QC,ON,NB,XX,YY # -e config.shippingDistancePreProcessor.apiKey=GOOGLE-MAPS-KEY  # -e config.emailSender=ses # -e config.emailSender.region=US_EAST_1 #Elastic Search configurations
 elasticsearch.cluster.name=shopizer
 elasticsearch.mode=remote
 elasticsearch.server.host=localhost
 elasticsearch.server.protocole=http
 elasticsearch.server.port=9200
 elasticsearch.server.proxy.user=
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 elasticsearch.server.proxy.password=
 elasticsearch.security.enabled=false
 elasticsearch.security.user=elastic
 
 ###Search starter configuration instead of config above
 search.credentials.username=admin
+#TODO ASA-FindPassword: Don't save passwords or login information in files
 search.credentials.password=admin
 
 search.clusterName=opensearch-cluster
