--- a/sm-core/pom.xml
+++ b/sm-core/pom.xml
@@ -66,7 +66,11 @@
 			<artifactId>shopizer-search-opensearch-spring-boot-starter</artifactId>
 			<version>1.0.3</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-starter-jdbc-mysql</artifactId>
+		</dependency>
 
 		<!--
 		Want to use Square Payment Module ?
