--- a/sm-shop/src/main/resources/profiles/cloud/database.properties
+++ b/sm-shop/src/main/resources/profiles/cloud/database.properties
@@ -30,6 +30,7 @@ db.preferredTestQuery=SELECT 1
 db.schema=SALESMANAGER
 hibernate.hbm2ddl.auto=update
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 ##
