--- a/sm-shop-model/pom.xml
+++ b/sm-shop-model/pom.xml
@@ -47,23 +47,25 @@
     </developer>
   </developers>
 
-  <dependencies>
-  
-    <!-- sm-core-model -->
-    <dependency>
-      <groupId>com.shopizer</groupId>
-      <artifactId>sm-core-model</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-    </dependency>
-    
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-webmvc</artifactId>
-	</dependency>
+	<dependencies>
+	
+		<!-- sm-core-model -->
+		<dependency>
+			<groupId>com.shopizer</groupId>
+			<artifactId>sm-core-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
     <dependency>
       <groupId>javax.annotation</groupId>
